# lex-gpt

./: .gitignore  README.md  pyproject.toml  segments_metadata.csv
notebooks/: day-11.ipynb  day-6.ipynb  day-7.ipynb  day-8.ipynb  day-9.ipynb
summaries/: .gitkeep
