[tool.poetry]
name = "lex-gpt"
version = "0.1.0"
description = "AI engine for Lex Fridman Podcast"
authors = ["Luke Skyward <luke.skyward.ai@gmail.com>"]
readme = "README.md"
packages = [{include = "lex_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
