[tool.poetry]
name = "lex-gpt"
version = "0.1.0"
description = "AI engine for Lex Fridman Podcast"
authors = ["Luke Skyward <luke.skyward.ai@gmail.com>"]
readme = "README.md"
packages = [{include = "lex_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
youtube-transcript-api = "^0.6.1"
google-api-python-client = "^2.97.0"
tiktoken = "^0.4.0"
langchain = "^0.0.272"
openai = "^0.27.9"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
